--- a/assets/styles/mobile/layout/_bottom_nav.scss
+++ b/assets/styles/mobile/layout/_bottom_nav.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: rem(60); // 모바일 내비게이션 높이
+    height: rem(75); // 모바일 내비게이션 높이
     background-color: $white;
     // border-top: none; // 그림자 또는 테두리 활용
     // border-top: 1px solid $gray-50;
@@ -23,11 +23,13 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        flex: 1;
         gap: rem(4);
         min-width: rem(48); // 터치 영역 확보
         height: 100%;
         color: $gray-300; // 색상 코드
         text-decoration: none;
+        @include mobile-touch-effect; // 터치 피드백 추가
 
         .icon {
             width: rem(24);
@@ -74,10 +76,10 @@
 
         &.active,
         &:hover {
-            color: $black;
+            color: $gray-700;
 
             .icon svg {
-                stroke: $black; // 스트로크 아이콘 가정
+                path: $gray-700; // 스트로크 아이콘 가정
             }
         }
     }
