--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2449,6 +2449,7 @@ custom-checkbox {
   border-radius: 0.25rem;
   font-size: 1rem;
   font-weight: 600;
+  gap: 0.25rem;
   color: #444444;
   cursor: pointer;
   transition: background-color 0.2s ease;
@@ -2971,7 +2972,7 @@ custom-checkbox {
 }
 .search-result-page .search-top-area .total-count-row {
   padding-bottom: 1.5rem;
-  border-bottom: 2px solid #444;
+  border-bottom: 2px solid #444444;
   font-size: 1rem;
   color: #444444;
   font-weight: 600;
@@ -3315,11 +3316,11 @@ custom-checkbox {
   height: 3rem;
   padding: 0.625rem 1rem;
   background-color: #ffffff;
-  border: 1px solid #222;
+  border: 1px solid #444444;
   border-radius: 0.25rem;
   font-size: 1rem;
   font-weight: 600;
-  color: #444;
+  color: #444444;
   cursor: pointer;
   letter-spacing: -0.02rem;
 }
@@ -3521,7 +3522,7 @@ custom-checkbox {
   height: 2.5rem;
   display: flex;
   align-items: center;
-  background-color: #fff;
+  background-color: #ffffff;
   border: 1px solid #cccccc;
   border-radius: 0.25rem;
 }
@@ -3545,7 +3546,7 @@ custom-checkbox {
   width: 2.5rem;
   height: 2.5rem;
   margin: 0;
-  background-color: #fff;
+  background-color: #ffffff;
 }
 .search-result-page .product-grid-4.list-view .product-card .card-control .btn-substitute {
   height: 2.5rem;
@@ -3625,10 +3626,10 @@ custom-checkbox {
   padding: 0;
 }
 .search-result-page .pagination-container .btn-pagination:hover {
-  background-color: #f5f5f5;
+  background-color: #f4f4f4;
 }
 .search-result-page .pagination-container .btn-pagination.active {
-  background-color: #444;
+  background-color: #444444;
   color: #ffffff;
 }
 .search-result-page .pagination-container .btn-pagination svg {
