--- a/assets/styles/mobile/layout/_header.scss
+++ b/assets/styles/mobile/layout/_header.scss
@@ -317,6 +317,11 @@
                                             color: $system-info;
                                             font-weight: 600;
                                         }
+
+
+                                        &:hover {
+                                            background-color: $gray-50;
+                                        }
                                     }
                                 }
                             }
