--- a/assets/styles/pc/layout/_header.scss
+++ b/assets/styles/pc/layout/_header.scss
@@ -627,7 +627,7 @@
                 }
             }
 
-            .recent-delte-btn {
+            .recent-delete-btn {
                 background: none;
                 border: none;
                 color: $gray-300;
